--- a/plugins/ShotGrid/vrShotGridGUI.ui
+++ b/plugins/ShotGrid/vrShotGridGUI.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>vrShotgunGUI</class>
- <widget class="QWidget" name="vrShotgunGUI">
+ <class>vrShotGridGUI</class>
+ <widget class="QWidget" name="vrShotGridGUI">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>vrShotgun</string>
+   <string>vrShotGrid</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -81,7 +81,7 @@ p, li { white-space: pre-wrap; }
         </sizepolicy>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;This plugin helps launch the VRED Shotgun integration.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;This plugin helps launch the VRED ShotGrid integration.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -124,7 +124,7 @@ p, li { white-space: pre-wrap; }
         </size>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;To learn more about the VRED integration see the &lt;/span&gt;&lt;a href=&quot;https://github.com/shotgunsoftware/tk-vred&quot;&gt;&lt;span style=&quot; font-size:11pt; text-decoration: underline; color:#30A7E3;&quot;&gt;github repo&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt; and the &lt;/span&gt;&lt;a href=&quot;https://support.shotgunsoftware.com/hc/en-us/articles/360007496994-VRED&quot;&gt;&lt;span style=&quot; font-size:11pt; text-decoration: underline; color:#30A7E3;&quot;&gt;Shotgun Support docs&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;. Access all of these tools from the Shotgun menu seen in the video below&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;To learn more about the VRED integration see the &lt;/span&gt;&lt;a href=&quot;https://github.com/shotgunsoftware/tk-vred&quot;&gt;&lt;span style=&quot; font-size:11pt; text-decoration: underline; color:#30A7E3;&quot;&gt;github repo&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt; and the &lt;/span&gt;&lt;a href=&quot;https://support.shotgunsoftware.com/hc/en-us/articles/360007496994-VRED&quot;&gt;&lt;span style=&quot; font-size:11pt; text-decoration: underline; color:#30A7E3;&quot;&gt;ShotGrid Support docs&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;. Access all of these tools from the ShotGrid menu seen in the video below&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="textFormat">
         <enum>Qt::AutoText</enum>
