--- a/plugins/Shotgun/vrShotgunGUI.ui
+++ b/plugins/Shotgun/vrShotgunGUI.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>vrShotGridGUI</class>
- <widget class="QWidget" name="vrShotGridGUI">
+ <class>vrShotgunGUI</class>
+ <widget class="QWidget" name="vrShotgunGUI">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>vrShotGrid</string>
+   <string>vrShotgun</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -68,7 +68,7 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;ShotGrid Plugin&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Shotgun Plugin&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -81,7 +81,7 @@ p, li { white-space: pre-wrap; }
         </sizepolicy>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;This plugin helps launch the VRED ShotGrid integration.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;This plugin helps launch the VRED Shotgun integration.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -124,7 +124,7 @@ p, li { white-space: pre-wrap; }
         </size>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;To learn more about the VRED integration see the &lt;/span&gt;&lt;a href=&quot;https://github.com/shotgunsoftware/tk-vred&quot;&gt;&lt;span style=&quot; font-size:11pt; text-decoration: underline; color:#30A7E3;&quot;&gt;github repo&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt; and the &lt;/span&gt;&lt;a href=&quot;https://support.shotgunsoftware.com/hc/en-us/articles/360007496994-VRED&quot;&gt;&lt;span style=&quot; font-size:11pt; text-decoration: underline; color:#30A7E3;&quot;&gt;ShotGrid Support docs&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;. Access all of these tools from the ShotGrid menu seen in the video below&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;To learn more about the VRED integration see the &lt;/span&gt;&lt;a href=&quot;https://github.com/shotgunsoftware/tk-vred&quot;&gt;&lt;span style=&quot; font-size:11pt; text-decoration: underline; color:#30A7E3;&quot;&gt;github repo&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt; and the &lt;/span&gt;&lt;a href=&quot;https://support.shotgunsoftware.com/hc/en-us/articles/360007496994-VRED&quot;&gt;&lt;span style=&quot; font-size:11pt; text-decoration: underline; color:#30A7E3;&quot;&gt;Shotgun Support docs&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;. Access all of these tools from the Shotgun menu seen in the video below&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="textFormat">
         <enum>Qt::AutoText</enum>
